--- a/.vscode/.extensions.json
+++ b/.vscode/.extensions.json
@@ -5,6 +5,7 @@
     "yzhang.markdown-all-in-one",
     "rebornix.ruby",
     "ms-python.python",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "dart-code.flutter"
   ]
 }
